--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,31 @@
-<h1>HOLA</h1>
+<!-- MAIN ROW -->
+<div
+	class="row g-0 border border-warning border-3 w-100 h-100 main ps-5 pe-2 pt-4 pb-5"
+>
+	<!-- LEFT COLUMN -->
+	<div class="col-8 border border-danger d-flex flex-column">
+		<!-- TITLE ROW -->
+		<div class="row g-0"><h1>8 libros disponibles</h1></div>
+		<!-- SUBTITLE ROW -->
+		<div class="row g-0"><h4>2 en la lista de lectura</h4></div>
+		<!-- FILTERS ROW -->
+		<div class="row">
+			<!-- PAGES FILTER COL -->
+			<div class="col-6">PAGES FILTER</div>
+			<!-- GENDER FILTER COL -->
+			<div class="col-6">GENDER FILTER</div>
+		</div>
+		<!-- BOOKS ROW -->
+		<div class="row g-0 flex-grow-1 books-container border border-danger">
+			BOOKS
+		</div>
+	</div>
+
+	<!-- RIGHT COLUMN -->
+	<div class="col-4 border border-danger d-flex flex-column">
+		<!-- LIST ROW -->
+		<div class="row"><h1>Lista de lectura</h1></div>
+		<!-- BOOK LIST ROW -->
+		<div class="row border border-danger g-0 flex-grow-1">BOOKS</div>
+	</div>
+</div>
