--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -8,3 +8,15 @@
 // ICONOS DE BOOTSTRAP
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css');
 
+html,
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+
+
+
+
