--- a/src/app/main-window/main-window.component.html
+++ b/src/app/main-window/main-window.component.html
@@ -1,1 +1,35 @@
-<p>main-window works!</p>
+<main class="g-0 p-0 m-0 border-3 h-100 w-100 border border-warning">
+	<!-- MAIN ROW -->
+	<div class="row main g-0 border border-danger border-3 main">
+		<!-- LEFT COLUMN -->
+		<div class="col-8 border border-danger d-flex flex-column">
+			<!-- TITLE ROW -->
+			<div class="row g-0"><h1>8 libros disponibles</h1></div>
+			<!-- SUBTITLE ROW -->
+			<div class="row g-0"><h4>2 en la lista de lectura</h4></div>
+			<!-- FILTERS ROW -->
+			<div class="row">
+				<!-- PAGES FILTER COL -->
+				<div class="col-6">PAGES FILTER</div>
+				<!-- GENDER FILTER COL -->
+				<div class="col-6">GENDER FILTER</div>
+			</div>
+			<!-- BOOKS ROW -->
+			<div class="row g-0 flex-grow-1 books-container border border-danger">
+				<div class="d-grid grid-template">
+					<div *ngFor="let book of booksArray" class="book">
+						<img [src]="book.thumbnailUrl" alt="{{ book.title }}" />
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- RIGHT COLUMN -->
+		<div class="col-4 border border-danger d-flex flex-column">
+			<!-- LIST ROW -->
+			<div class="row"><h1>Lista de lectura</h1></div>
+			<!-- BOOK LIST ROW -->
+			<div class="row border border-danger g-0 flex-grow-1"></div>
+		</div>
+	</div>
+</main>
