maquetación columna izquierda acabada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-main-window [booksArray]="books"></app-main-window>
+<app-main-window
+	[booksArray]="books"
+	[categoriesArray]="categories"
+></app-main-window>
