--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -12,8 +12,8 @@
 html,
 body {
 	height: 100%;
-	margin: 0;
-	padding: 0;
+	// margin: 0;
+	// padding: 0;
 	width: 100%;
 	//overflow: hidden; /* Evita el scroll horizontal y vertical en el body */
 }
