--- a/src/app/main-window/main-window.component.scss
+++ b/src/app/main-window/main-window.component.scss
@@ -1,24 +1,11 @@
-/* CSS for the books grid */
-.books-container {
-	//overflow-y: auto; /* Enable vertical scrollbar if needed */
-	height: fit-content; /* Set the height to 100% of the viewport height */
-}
-
 .d-grid.grid-template {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr); /* 3 columns per row */
+	grid-template-columns: repeat(4, 1fr); /* 3 columns per row */
 	grid-gap: 10px; /* Adjust the gap between images as needed */
 }
 
-/* Make sure images don't overflow their containers */
-.book img {
-	max-width: 100%;
-	max-height: 100%;
-	object-fit: contain;
+.booksRow {
+	overflow: auto;
 }
 
-.main {
-    height: 100%;
-	//height: 100%; /* Establece la altura al 100% de la pantalla */
-	//overflow-y: hidden; /* Evita el scroll vertical en el contenedor principal */
-}
+
